--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,7 +160,9 @@
     <a href="mailto:arghyaghoshal44@gmail.com"><i class="fas fa-envelope"></i></a>
 <a href="https://wa.me/916291561585"><i class="fab fa-whatsapp"></i></a>
 <a href="https://www.instagram.com/aaarg.hyaaa//"><i class="fab fa-instagram"></i></a>
-<a href="https://www.instagram.com/aaarg.hyaaa/?utm_source=ig_web_button_share_sheet"><i class="fab fa-linkedin"></i></a>
+<a href="https://www.linkedin.com/in/arghya-ghoshal-56527529a/" target="_blank">
+  <i class="fab fa-linkedin"></i>
+</a>
 
   </div>
 </footer>
